# PREAgent

./: .env  README.md  data.dvc  pyproject.toml  requirements.txt  tmp.dvc
data/: chatgpt_house_match_data.csv
notebook/: 0_generate_data.ipynb  1_create_embeddings.ipynb  2_query_housematch_agent.ipynb  chatgpt_house_match_data.csv  create_data.ipynb
